--- a/contact.html
+++ b/contact.html
@@ -174,7 +174,7 @@
     <header>
         <div class="header-container">
             <a href="index.html" class="logo">
-                <i class="fas fa-dna"></i>
+                <i class="fa-solid fa-lungs"></i>
                 <span>Lung TFDB</span>
             </a>
             
